--- a/API_PersonalBudget/package.json
+++ b/API_PersonalBudget/package.json
@@ -1,7 +1,8 @@
 {
   "dependencies": {
     "dotenv": "^16.0.1",
-    "express": "^4.18.1"
+    "express": "^4.18.1",
+    "http-errors": "^2.0.0"
   },
   "devDependencies": {
     "debug": "^4.3.4",
@@ -11,7 +12,8 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "set DEBUG=app:* & nodemon index.js"
   },
   "keywords": [],
   "author": "John Esteban Gutierrez Gutierrez",
