--- a/API_PersonalBudget/package.json
+++ b/API_PersonalBudget/package.json
@@ -2,7 +2,8 @@
   "dependencies": {
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
-    "http-errors": "^2.0.0"
+    "http-errors": "^2.0.0",
+    "mysql": "^2.18.1"
   },
   "devDependencies": {
     "debug": "^4.3.4",
