--- a/API_PersonalBudget/package.json
+++ b/API_PersonalBudget/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "http-errors": "^2.0.0",
@@ -14,7 +15,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "set DEBUG=app:* & nodemon index.js"
+    "dev": "set DEBUG=app:* & nodemon index.js",
+    "start": "node index.js"
   },
   "keywords": [],
   "author": "John Esteban Gutierrez Gutierrez",
